# PZ2048

./: CMakeLists.txt  README.md
src/: game_logic.cpp  game_logic_test.cpp  score_13514_ver.cpp  score_14018_ver.cpp  score_15326_ver.cpp  server.cpp  user_logic.cpp  user_logic_test.cpp  utils.cpp
src/include/: common.h  game_logic.h  user_logic.h  utils.h
testcase/ans/: 1.ans  2.ans  3.ans  4.ans  5.ans
testcase/input/: 2.in  3.in  4.in  5.in
web/: app.js  index.html  style.css
